syntax = "proto3";

package example.user.v1;

import "example/user/v1/common.proto";

option go_package = "github.com/aplulu/modular-monolith-example-go/internal/grpc/example/user/v1;user";

// 内部呼び出し用のユーザサービス
service InternalUserService {
  // ユーザを取得
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  // ユーザID
  string user_id = 1;
}

message GetUserResponse {
  // ユーザ
  User user = 1;
}
